@@ -31,7 +31,7 @@ import pt.ist.fenixWebFramework.rendererExtensions.util.IPresentableEnum;
 @Deprecated
 public enum OccupationPeriodType implements IPresentableEnum {
 
-    LESSONS, EXAMS, GRADE_SUBMISSION, EXAMS_SPECIAL_SEASON, GRADE_SUBMISSION_SPECIAL_SEASON;
+    LESSONS;
 
     @Override
     public String getLocalizedName() {
