@@ -1,4 +1,5 @@
 - Refactor: Remove persistent relation between EvaluationSeason and OccupationPeriodReference
+- Refactor: Remove deprecated OccupationPeriodType values and management UI
 
 36.0.0 (06-10-2022)
 - Refactor: Remove persistent relation between CourseLoad and LessonInstance
